--- a/categoria.html
+++ b/categoria.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Categorias</title>
+    <title>Categorías</title>
     <link rel="stylesheet" href="css/estilos_categoria.css">
 </head>
 
@@ -24,14 +24,60 @@
         </nav>
     </header>
 
+    <main>
+        <section class="products">
+            <div class="product-card">
+                <img src="img/teclado.jpg" alt="Teclado">
+                <h2>Teclado RGB</h2>
+                <p class="price">Q155.92</p>
+                <p class="description">Teclado con iluminación RGB y diseño ergonómico.</p>
+                <button class="add-to-cart">Agregar al carrito</button>
+            </div>
+            <div class="product-card">
+                <img src="img/teclado_gamer.jpg" alt="Teclado Gamer">
+                <h2>Teclado Mecánico Gamer</h2>
+                <p class="price">Q233.92</p>
+                <p class="description">Teclado mecánico para gamers con iluminación RGB.</p>
+                <button class="add-to-cart">Agregar al carrito</button>
+            </div>
+            <div class="product-card">
+                <img src="img/laptop.jpg" alt="Laptop">
+                <h2>Laptop Samsung</h2>
+                <p class="price">Q311.92</p>
+                <p class="description">Laptop ligera y potente con pantalla táctil.</p>
+                <button class="add-to-cart">Agregar al carrito</button>
+            </div>
+            <div class="product-card">
+                <img src="img/audifono.jpg" alt="Audífonos">
+                <h2>Audífonos Inalámbricos</h2>
+                <p class="price">Q389.92</p>
+                <p class="description">Audífonos con sonido envolvente y conexión Bluetooth.</p>
+                <button class="add-to-cart">Agregar al carrito</button>
+            </div>
+            <div class="product-card">
+                <img src="img/gamer.webp" alt="PC Gamer">
+                <h2>PC Gamer</h2>
+                <p class="price">Q467.92</p>
+                <p class="description">PC de alto rendimiento con iluminación RGB.</p>
+                <button class="add-to-cart">Agregar al carrito</button>
+            </div>
+            <div class="product-card">
+                <img src="img/mouse.webp" alt="Mouse Gamer">
+                <h2>Mouse Gamer</h2>
+                <p class="price">Q545.92</p>
+                <p class="description">Mouse ergonómico para gamers con alta precisión.</p>
+                <button class="add-to-cart">Agregar al carrito</button>
+            </div>
+
+        </section>
+    </main>
+
     <script>
         function toggleMenu() {
             const navMenu = document.querySelector('.nav-menu');
             navMenu.classList.toggle('show');
         }
     </script>
-
-
 </body>
 
 </html>
