--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
         <section class="introduccion">
             <article class="articulo">
                 <h2>Historia</h2>
-                <p>ATLANTICO nació de la pasión por la tecnología de dos amigos, Ana y David, quienes vieron la oportunidad de crear un espacio donde los entusiastas de los gadgets pudieran encontrar productos de alta calidad y asesoramiento experto. Iniciaron en un pequeño local en el centro de la ciudad, y gracias a su dedicación y visión, ATLANTICO creció rápidamente, expandiendo su catálogo y abriendo nuevas tiendas. Hoy en día, ATLANTICO es sinónimo de innovación y excelencia en el sector tecnológico, con una presencia fuerte tanto en línea como en tiendas físicas.</p>
+                <p>ATLANTICO nació de la pasión por la tecnología de dos amigos, Ana y David, quienes vieron la
+                    oportunidad de crear un espacio donde los entusiastas de los gadgets pudieran encontrar productos de
+                    alta calidad y asesoramiento experto. Iniciaron en un pequeño local en el centro de la ciudad, y
+                    gracias a su dedicación y visión, ATLANTICO creció rápidamente, expandiendo su catálogo y abriendo
+                    nuevas tiendas. Hoy en día, ATLANTICO es sinónimo de innovación y excelencia en el sector
+                    tecnológico, con una presencia fuerte tanto en línea como en tiendas físicas.</p>
             </article>
         </section>
 
@@ -43,9 +48,11 @@
                 <li>Sostenibilidad: Comprometidos con el medio ambiente y la reducción del impacto ambiental.</li>
             </ul>
             <h3>Misión</h3>
-            <p>Ser la tienda de referencia en accesorios tecnológicos a nivel nacional, ofreciendo una experiencia de compra única y satisfaciendo las necesidades de los clientes más exigentes.</p>
+            <p>Ser la tienda de referencia en accesorios tecnológicos a nivel nacional, ofreciendo una experiencia de
+                compra única y satisfaciendo las necesidades de los clientes más exigentes.</p>
             <h3>Visión</h3>
-            <p>Convertirnos en líderes del mercado tecnológico, reconocidos por nuestra innovación, calidad y compromiso con la sostenibilidad, construyendo relaciones duraderas con nuestros clientes y proveedores.</p>
+            <p>Convertirnos en líderes del mercado tecnológico, reconocidos por nuestra innovación, calidad y compromiso
+                con la sostenibilidad, construyendo relaciones duraderas con nuestros clientes y proveedores.</p>
         </section>
 
         <section class="categorias">
