--- a/producto.html
+++ b/producto.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Productos</title>
+    <title>Productos - ATLANTICO</title>
     <link rel="stylesheet" href="css/estilos_productos.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
+
 <body class="fondo">
     <header>
         <h1>ATLANTICO</h1>
@@ -16,11 +19,129 @@
             <ul class="menu">
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="categoria.html">Categorías</a></li>
-                <li><a href="producto.html">Productos</a></li>
+                <li><a href="productos.html">Productos</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
+
+    <main class="productos-lista">
+        <!-- Producto 1 -->
+        <section class="producto-detalle">
+            <div class="imagenes">
+                <div class="imagen-principal">
+                    <img src="img/img1/6.png" alt="Producto Principal">
+                </div>
+                <div class="imagenes-adicionales">
+                    <img src="img/img1/7.png" alt="Producto 1">
+                    <img src="img/img1/8.png" alt="Producto 2">
+                    <img src="img/img1/9.png" alt="Producto 3">
+                    <img src="img/img1/10.png" alt="Producto 4">
+                </div>
+            </div>
+            <div class="informacion">
+                <h2>Laptop Dell Inspiron 3535 de 15.6" FHD, AMD Ryzen 7 7730U, 16GB RAM, Almacenamiento 1TB SSD</h2>
+                <p>Garantía: 1 Año</p>
+                <p>Elegible para cuotas. <a href="#">Ver Cuotas Disponibles</a></p>
+                <ul class="especificaciones">
+                    <li>Procesador: AMD Ryzen 7</li>
+                    <li>Capacidad de Almacenamiento: 1 TB</li>
+                    <li>RAM:16 GB DDR4</li>
+                    <li>Color: Gris</li>
+                    <li>Lenguaje del Teclado: Español</li>
+                    <li>Pantalla Táctil: No</li>
+                    <li>Velocidad: Base 1.30 GHz, Turbo 4.40 GHz</li>
+                </ul>
+                <div class="botones-compra">
+                    <button class="agregar-carrito-btn">Agregar a Carrito</button>
+                    <button class="comprar-btn">Comprar ahora</button>
+                </div>
+                <button class="deseos-btn">Agregar a Lista de Deseos</button>
+                <div class="proteccion-compra">
+                    <p>100% de Compra Protegida. <a href="#">Productos originales</a> | <a href="#">Pagos seguros</a>
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Producto 2 -->
+        <section class="producto-detalle">
+            <div class="imagenes">
+                <div class="imagen-principal">
+                    <img src="img/img1/1.png" alt="Producto Principal">
+                </div>
+                <div class="imagenes-adicionales">
+                    <img src="img/img1/2.png" alt="Producto 1">
+                    <img src="img/img1/3.png" alt="Producto 2">
+                    <img src="img/img1/4.png" alt="Producto 3">
+                    <img src="img/img1/5.png" alt="Producto 4">
+                </div>
+            </div>
+            <div class="informacion">
+                <h2>Laptop HP Pavilion Gaming 15-dk2500la de 15.6" procesador Core i5 11300H, 8GB RAM, RTX 3050 4GB</h2>
+                <p>Garantía: 1 Año</p>
+                <p>Elegible para cuotas. <a href="#">Ver Cuotas Disponibles</a></p>
+                <ul class="especificaciones">
+                    <li>Procesador: Intel Core i5</li>
+                    <li>Capacidad de Almacenamiento: 512 GB</li>
+                    <li>RAM: 8 GB DDR4</li>
+                    <li>Color: Negro</li>
+                    <li>Lenguaje del Teclado: Español</li>
+                    <li>Pantalla Táctil: no</li>
+                    <li>Velocidad: Base 2.80 GHz, Turbo 4.70 GHz</li>
+                </ul>
+                <div class="botones-compra">
+                    <button class="agregar-carrito-btn">Agregar a Carrito</button>
+                    <button class="comprar-btn">Comprar ahora</button>
+                </div>
+                <button class="deseos-btn">Agregar a Lista de Deseos</button>
+                <div class="proteccion-compra">
+                    <p>100% de Compra Protegida. <a href="#">Productos originales</a> | <a href="#">Pagos seguros</a>
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Producto 3 -->
+        <section class="producto-detalle">
+            <div class="imagenes">
+                <div class="imagen-principal">
+                    <img src="img/img1/11.png" alt="Producto Principal">
+                </div>
+                <div class="imagenes-adicionales">
+                    <img src="img/img1/12.png" alt="Producto 1">
+                    <img src="img/img1/13.png" alt="Producto 2">
+                    <img src="img/img1/14.png" alt="Producto 3">
+                    <img src="img/img1/15.png" alt="Producto 4">
+                </div>
+            </div>
+            <div class="informacion">
+                <h2>Laptop Lenovo Legion Slim 5 16APH8 de 16", Ryzen 7 7840HS, 16GB RAM, 1TB SSD, RTX 4070 8GB</h2>
+                <p>Garantía: 1 Año</p>
+                <p>Elegible para cuotas. <a href="#">Ver Cuotas Disponibles</a></p>
+                <ul class="especificaciones">
+                    <li>Procesador: AMD Ryzen 7</li>
+                    <li>Capacidad de Almacenamiento: 1 TB</li>
+                    <li>RAM: 16 GB DDR4</li>
+                    <li>Color: Azul</li>
+                    <li>Tarjeta de video: Nvidia GeForce RTX 4070 </li>
+                    <li>Lenguaje del Teclado: Español</li>
+                    <li>Pantalla Táctil: No</li>
+                    <li>Velocidad: Base 2.30 GHz, Turbo 4.20 GHz</li>
+                </ul>
+                <div class="botones-compra">
+                    <button class="agregar-carrito-btn">Agregar a Carrito</button>
+                    <button class="comprar-btn">Comprar ahora</button>
+                </div>
+                <button class="deseos-btn">Agregar a Lista de Deseos</button>
+                <div class="proteccion-compra">
+                    <p>100% de Compra Protegida. <a href="#">Productos originales</a> | <a href="#">Pagos seguros</a>
+                    </p>
+                </div>
+            </div>
+        </section>
+
+    </main>
 
     <script>
         function toggleMenu() {
@@ -29,4 +150,5 @@
         }
     </script>
 </body>
+
 </html>
