--- a/contacto.html
+++ b/contacto.html
@@ -25,7 +25,7 @@
     </header>
     <div class="container">
         <h1>Contáctanos</h1>
-        <form action="celsoperez878@gmail.com" method="post" enctype="text/plain">
+        <form id="contactForm">
             <label for="nombre">Nombre:</label>
             <input type="text" id="nombre" name="nombre" required aria-label="Nombre">
 
@@ -37,6 +37,7 @@
 
             <button type="submit">Enviar</button>
         </form>
+        <div id="message" style="display: none;">Enviado</div>
     </div>
 
     <script>
@@ -44,10 +45,12 @@
             const navMenu = document.querySelector('.nav-menu');
             navMenu.classList.toggle('show');
         }
+
+        document.getElementById('contactForm').addEventListener('submit', function(event) {
+            event.preventDefault();
+            document.getElementById('message').style.display = 'block';
+        });
     </script>
-
-
 </body>
-
 
 </html>
