ctualizacion del archivo

--- a/producto.html
+++ b/producto.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Productos - ATLANTICO</title>
+    <title class="titulo">Productos - ATLANTICO</title>
     <link rel="stylesheet" href="css/estilos_productos.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -19,7 +19,7 @@
             <ul class="menu">
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="categoria.html">Categorías</a></li>
-                <li><a href="productos.html">Productos</a></li>
+                <li><a href="producto.html">Productos</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
